# alembic-postgresql-enum

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: black.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  test_on_push.yaml
alembic_postgresql_enum/: __init__.py  add_create_type_false.py  add_postgres_using_to_text.py  compare_dispatch.py  configuration.py  connection.py  enum_alteration.py  enum_creation.py  enum_deletion.py  enum_op_base.py  get_enum_data.py
alembic_postgresql_enum/detection_of_changes/: enum_alteration.py  enum_creation.py  enum_deletion.py
alembic_postgresql_enum/get_enum_data/: __init__.py  declared_enums.py  defined_enums.py  types.py
alembic_postgresql_enum/operations/: create_enum.py  drop_enum.py  enum_lifecycle_base.py  sync_enum_values.py
alembic_postgresql_enum/sql_commands/: column_default.py  comparison_operators.py  enum_type.py  indexes.py
docs/: alternatives.md
src/: __init__.py  enum_alteration.py  enum_creation.py  get_enum_data.py
tests/: README.md  conftest.py  requirements.txt  schemas.py  test_enum_alteration.py  test_enum_creation.py  test_get_enum_data.py  test_sync_enum_values.py  test_type_decorator_enums.py
tests/base/: render_and_run.py  run_migration_test_abc.py
tests/fixtures/: db.py
tests/get_enum_data/: test_get_declared_enums.py  test_get_defined_enums.py  test_type_decorator_enums.py
tests/sync_enum_values/: test_array_column.py  test_exotic_column_name.py  test_exotic_enum_name.py  test_exotic_schema_name.py  test_migration_hang_up.py  test_rename_default_if_required.py  test_render.py  test_reorder.py  test_run_array_new_column.py  test_run_in_different_schema.py  test_run_sync_enum_values.py
tests/test_alter_column/: test_text_column.py
tests/test_constraints/: test_partial_indexes.py  test_unique.py
tests/test_enum_creation/: test_add_column.py  test_create_array.py  test_create_schema.py  test_create_table.py  test_drop_column.py  test_drop_table.py  test_repr_workaround_inheritance.py  test_scalar_coercible_inheritance.py
tests/test_without_schema_changes/: test_explicit_schema.py  test_implicit_schema_1_4_style.py  test_implicit_schema_2_0_style.py  test_inherit_schema_true.py
tests/utils/: migration_context.py
