[tool.poetry]
name = "alembic-postgresql-enum"
version = "1.5.0"
description = "Alembic autogenerate support for creation, alteration and deletion of enums"
authors = ["RustyGuard"]
license = "MIT"
readme = "README.md"
packages = [{ include = "alembic_postgresql_enum" }]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[tool.poetry.urls]
"Source code" = "https://github.com/RustyGuard/alembic-postgresql-enum"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = ">=1.4"
alembic = ">=1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
