[project]
name = "alembic-postgresql-enum"
version = "1.8.0"
description = "Alembic autogenerate support for creation, alteration and deletion of enums"
authors = [
    { name = "RustyGuard" },
    { name = "AlexandrovRoman" },
]
requires-python = ">=3.7.0"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "SQLAlchemy>=1.4",
    "alembic>=1.7",
]

[project.urls]
"Source code" = "https://github.com/Pogchamp-company/alembic-postgresql-enum"

[tool.hatch.build.targets.sdist]
include = ["alembic_postgresql_enum"]

[tool.hatch.build.targets.wheel]
include = ["alembic_postgresql_enum"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
conflicts = [
    [
      { group = "matrix-1-4" },
      { group = "matrix-2-0" },
    ],
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.9",
    "pytest>=7.4.4",
]
matrix-1-4 = [
    "alembic>=1.12.1",
    "sqlalchemy~=1.4.0",
]
matrix-2-0 = [
    "alembic>=1.12.1",
    "sqlalchemy~=2.0.0",
]


[tool.black]
line-length = 120
